Changed the logo to an svg to fix the issue on ie. Removed the a testimonial image and added a linked text to http://www.poudre-fire.org/about-us/reports-surveys in the budget section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,16 +313,23 @@ ul.pager li a:visited {
 .logo img {
   display: block;
   margin: 0 auto 0 auto;
+  width: 100%;
 }
 @media (min-width: 50em) {
   /* line 2, ../sass/partials/design/blocks/_logo.scss */
   .logo img {
     margin: 0;
+    height: 157px;
+    margin-top: -32px;
+    width: auto;
   }
 }
 /* line 92, ../../vendor/bundle/gems/breakpoint-2.5.0/stylesheets/_breakpoint.scss */
 .no-mq .logo img {
   margin: 0;
+  height: 157px;
+  margin-top: -32px;
+  width: auto;
 }
 
 /* line 1, ../sass/partials/design/blocks/_main-navigation.scss */
@@ -1486,8 +1493,6 @@ ul.pager li a:visited {
 /* line 1, ../sass/partials/design/regions/_header.scss */
 .logo {
   text-align: center;
-  background: url("../images/2016.svg") left center no-repeat;
-  background-size: contain;
 }
 @media (min-width: 50em) {
   /* line 1, ../sass/partials/design/regions/_header.scss */
@@ -1497,7 +1502,6 @@ ul.pager li a:visited {
     margin-right: -100%;
     margin-left: 0;
     clear: none;
-    text-align: left;
   }
 }
 /* line 92, ../../vendor/bundle/gems/breakpoint-2.5.0/stylesheets/_breakpoint.scss */
@@ -1507,9 +1511,8 @@ ul.pager li a:visited {
   margin-right: -100%;
   margin-left: 0;
   clear: none;
-  text-align: left;
 }
-/* line 9, ../sass/partials/design/regions/_header.scss */
+/* line 10, ../sass/partials/design/regions/_header.scss */
 .logo h1 {
   color: #6CAFDF;
   margin: 0 0 0 50px;
@@ -1518,7 +1521,7 @@ ul.pager li a:visited {
   font-size: 2.5em;
   line-height: 1em;
 }
-/* line 18, ../sass/partials/design/regions/_header.scss */
+/* line 19, ../sass/partials/design/regions/_header.scss */
 .logo h2 {
   color: #AB1D40;
   margin: 0 0 0 50px;
@@ -1529,7 +1532,7 @@ ul.pager li a:visited {
 }
 
 @media (min-width: 50em) {
-  /* line 27, ../sass/partials/design/regions/_header.scss */
+  /* line 28, ../sass/partials/design/regions/_header.scss */
   .main-nav {
     width: 48.93617%;
     float: right;
@@ -1548,18 +1551,18 @@ ul.pager li a:visited {
   clear: none;
   margin-top: -10px;
 }
-/* line 32, ../sass/partials/design/regions/_header.scss */
+/* line 33, ../sass/partials/design/regions/_header.scss */
 .main-nav ul {
   padding: 0;
   margin: 0;
 }
-/* line 35, ../sass/partials/design/regions/_header.scss */
+/* line 36, ../sass/partials/design/regions/_header.scss */
 .main-nav ul li {
   display: inline-block;
   text-align: center;
   margin: 1em .5em 0 0;
 }
-/* line 39, ../sass/partials/design/regions/_header.scss */
+/* line 40, ../sass/partials/design/regions/_header.scss */
 .main-nav ul li a {
   width: 239px;
   height: 35px;
@@ -1572,40 +1575,40 @@ ul.pager li a:visited {
   -webkit-transition: color .5s ease;
           transition: color .5s ease;
 }
-/* line 49, ../sass/partials/design/regions/_header.scss */
+/* line 50, ../sass/partials/design/regions/_header.scss */
 .main-nav ul li a:hover {
   color: #002b54;
 }
-/* line 55, ../sass/partials/design/regions/_header.scss */
+/* line 56, ../sass/partials/design/regions/_header.scss */
 .main-nav .by-the-numbers {
   background: url("../images/by-the-numbers.svg") center center no-repeat;
   padding-left: 20px;
 }
-/* line 59, ../sass/partials/design/regions/_header.scss */
+/* line 60, ../sass/partials/design/regions/_header.scss */
 .main-nav .our-mission {
   background: url("../images/our-mission.svg") center center no-repeat;
   padding-left: 20px;
 }
-/* line 63, ../sass/partials/design/regions/_header.scss */
+/* line 64, ../sass/partials/design/regions/_header.scss */
 .main-nav .statistical-report {
   background: url("../images/pfa-service-areas.svg") center center no-repeat;
   padding-right: 20px;
 }
-/* line 67, ../sass/partials/design/regions/_header.scss */
+/* line 68, ../sass/partials/design/regions/_header.scss */
 .main-nav .budget {
   background: url("../images/budget.svg") center center no-repeat;
   padding-right: 20px;
 }
 
-/* line 74, ../sass/partials/design/regions/_header.scss */
+/* line 75, ../sass/partials/design/regions/_header.scss */
 .header-wrapper {
   padding: 1em 0;
   background: #002B54;
   width: 100%;
   text-align: center;
 }
-@media (min-width: 50em) {
-  /* line 74, ../sass/partials/design/regions/_header.scss */
+@media (min-width: 62.5em) {
+  /* line 75, ../sass/partials/design/regions/_header.scss */
   .header-wrapper {
     height: 125px;
     z-index: 15;
